--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color:#547fff; font-family:Arial;">
 
-<h1 style="background-color:rgb(255, 100, 100); color:white; font-size:300%"> Title text</h1>
+<h1 style="background-color:rgb(255, 100, 100); color:white; font-size:300%; text-align:center;"> Title text</h1>
 <sup style="font-size:225%">Subtitle</sup>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro corrupti dolor amet expedita repellat, incidunt architecto sit eligendi perspiciatis eaque magni non soluta fugit doloremque officia nesciunt vitae explicabo aspernatur.</p>
 
