Update to title and others
Changed title to "Hello."
Added horizontal line
Subtitle is now <p> tag and says "Exposing fruit"

--- a/main.html
+++ b/main.html
@@ -3,11 +3,16 @@
 <head>
 <title>HTML file</title>
 </head>
-<body style="background-color:#547fff; font-family:Arial;">
+<body style="background-color:#547fff; font-family:Arial; font-size:100%;">
 
-<h1 style="background-color:rgb(255, 100, 100); color:white; font-size:300%; text-align:center;"> Title text</h1>
-<sup style="font-size:225%">Subtitle</sup>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro corrupti dolor amet expedita repellat, incidunt architecto sit eligendi perspiciatis eaque magni non soluta fugit doloremque officia nesciunt vitae explicabo aspernatur.</p>
+<!--title-->
+<h1 style="background-color:rgb(255, 100, 100); color:white; font-size:400%; text-align:center;">Hello.</h1>
+<h3 style="font-size:200%; text-align:center; color:white; background-color: rgb(127, 170, 255);">This is about exposing fruits and other supposedly "healthy" things</h3>
+
+<hr style="height:2.75px; background-color:rgb(255, 255, 255); border-width:0;">
+
+<!--main content-->
+<p style="text-align:justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro corrupti dolor amet expedita repellat, incidunt architecto sit eligendi perspiciatis eaque magni non soluta fugit doloremque officia nesciunt vitae explicabo aspernatur.</p>
 
 
 </body>
