--- a/main.html
+++ b/main.html
@@ -6,13 +6,17 @@
 <body style="background-color:#547fff; font-family:Arial; font-size:100%;">
 
 <!--title-->
-<h1 style="background-color:rgb(255, 100, 100); color:white; font-size:400%; text-align:center;">Hello.</h1>
-<h3 style="font-size:200%; text-align:center; color:white; background-color: rgb(127, 170, 255);">This is about exposing fruits and other supposedly "healthy" things</h3>
+<h1 style="background-color: rgb(255, 100, 100); color: white; font-size: 400%; text-align: center;">Hello.</h1>
+<h3 style="font-size: 200%; text-align: center; color: white; background-color: rgb(127, 170, 255);">This is about exposing fruits and other supposedly "healthy" things</h3>
 
-<hr style="height:2.75px; background-color:rgb(255, 255, 255); border-width:0;">
+<hr style="height: 2.75px; background-color: rgb(255, 255, 255); border-width: 0px;">
 
 <!--main content-->
-<p style="text-align:justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro corrupti dolor amet expedita repellat, incidunt architecto sit eligendi perspiciatis eaque magni non soluta fugit doloremque officia nesciunt vitae explicabo aspernatur.</p>
+<button type="button" onclick="alert('I am not stupid. I know that these are natural things and are actually good, but I am just having fun here, let me have this')" 
+style="text-align:center;">Click Me!</button>
+
+<p style="text-align: justify;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro corrupti dolor amet expedita repellat, incidunt architecto sit eligendi perspiciatis eaque magni non soluta fugit dolo remque officia nesciunt vitae explicabo aspernatur.</p>
+
 
 
 </body>
