Convert some styles to external CSS file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
 <title>HTML file</title>
 </head>
-<body style="background-color:#547fff; font-family:Arial; font-size:100%;">
+<body>
 
 <!--title-->
-<h1 style="background-color: rgb(255, 100, 100); color: white; font-size: 400%; text-align: center;">Hello.</h1>
+<h1>Hello.</h1>
 <h3 style="font-size: 200%; text-align: center; color: white; background-color: rgb(127, 170, 255);">This is about exposing fruits and other supposedly "healthy" things</h3>
 
 <hr style="height: 2.75px; background-color: rgb(255, 255, 255); border-width: 0px;">
